# oneshot

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  oneshot.db  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: publish.yaml  test.yaml
Back/: Dockerfile  app.py  auth.py  database.py  handle.py  models.py  storage.py
Back/core/: database.py  models.py  redis_client.py  storage.py
Back/services/: auth.py  handle.py  rate_limiter.py
Back/tests/: conftest.py  test_auth.py  test_shots.py
front/: Dockerfile  index.html  package-lock.json  package.json
front/src/: App.jsx  index.css
front/src/components/: AuthScreen.jsx  FloatingMenu.css  FloatingMenu.jsx  ShotCard.jsx  SkeletonShot.jsx  Toast.jsx
front/src/pages/: Feed.jsx  Profile.jsx  Upload.jsx
